# gpu_for_bd_gamers

./: .gitignore  Dockerfile  LICENSE.md  README.md  crontab  data_coll_funcs.py  data_coll_script.py  database.py  overall_tier_score.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  techpowerup_scrape.py  test_integration_test.py  tier_score.xlsx
.github/workflows/: cicd.yml  daily_scraping.yaml  integration_test.yml
docs/: tier_score.md  tier_score_simplified.md
gpu4bdgamers/: data_coll_script.py  database.py  df_utils.py  dirs.py  gpu_units.py  logger.py  main.py  master_df.py  naming.py  overall_tier_score.py  run.py  score.py  scraping.py  scraping_attributes.py  tier_score.xlsx
gpu4bdgamers/configs/: scraping_config.toml
gpu4bdgamers/gpu_units/: __init__.py  gpu_units.py
gpu4bdgamers/gpu_units_of_interest/: geforce_gpu_units.txt  intel_gpu_units.txt  radeon_gpu_units.txt
gpu4bdgamers/new_gpu_unit/: add_to_txt.py  exceptions.py
gpu_units_of_interest/: geforce_gpu_units.txt  intel_gpu_units.txt  radeon_gpu_units.txt
new_gpu_unit/: main.py  test_new_gpu_unit.py
new_gpu_unit/test_data_dir/: not_exist.txt
old_structure/new_gpu_unit/: new_gpu_unit.py  test_new_gpu_unit.py
output_files/: gpu_of_interest.xlsx
tests/: test_integration_test.py  tier_score.xlsx
tests/gpu_units_of_interest/: geforce_gpu_units.txt  radeon_gpu_units.txt
tests/integration_test/: conftest.py  scraping_config.toml  test_integration_test.py  tier_score.xlsx
tests/unit_tests/: conftest.py  gpu_units_test.txt  master_df.csv  (+2 more)
(+16 files in other folders)
