[metadata]
name = gpu_for_bd_gamers
description = package for processing data for gpu_for_bd_gamers project
author = Samin Yead
license = Apache 2.0
license_file = LICENSE.md

[options]
packages = gpu4bdgamers
install_requires = 
    beautifulsoup4>=4.6.3
    openpyxl>=3.0.10
    pandas>=1.5.3
    pydantic>=2.5.2
    python-dotenv>=1.0.0
    Requests>=2.31.0
    selenium>=4.15.2
    setuptools>=65.5.1
    SQLAlchemy>=1.4.45
    toml>=0.10.2
python_requires = >=3.11.0
package_dir = =.
